--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,8 @@
 .hero-unit
   %h1 FantasyHAUS
   %p this is where your haus comes for sports and shit!
-  = link_to 'Login', new_user_session_path, :class => "btn btn-primary btn-large"
-  = link_to 'Sign Up!', new_user_registration_path, :class => "btn btn-success btn-large sign_up"
+  - if user_signed_in?
+    = link_to 'Edit account', edit_user_registration_path, :class => "btn btn-primary btn-large"
+  - else
+    = link_to 'Sign In', new_user_session_path, :class => "btn btn-primary btn-large"
+    = link_to 'Sign Up!', new_user_registration_path, :class => "btn btn-success btn-large sign_up"
