--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -8,3 +8,9 @@
   -@authentications.each do |auth|
     Yahoo Guid:
     =auth.uid
+  %br
+  %strong Leagues:
+  -@leagues.each do |league|
+    League:
+    =league.body
+    %br
